...
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/title_restaurant_around_you"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_15sp" />

                <TextView
                    android:id="@+id/label_nearest_restaurant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="start"
                    android:layout_marginEnd="@dimen/dimen_10dp"
...
                    android:textColor="@color/link_color"
                    android:textSize="@dimen/dimen_11sp" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_resto_nearby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:orientation="horizontal"
                app:spanCount="4"
                tools:itemCount="4"
...
