...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:layout_toStartOf="@id/btn_write_review"
                        android:src="@drawable/ic_baseline_add_a_photo_24" />


                    <ImageView
                        android:id="@+id/btn_write_review"
                        android:layout_width="wrap_content"
...


            </RelativeLayout>


            <TextView
                android:id="@+id/label_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_20dp"
                android:ellipsize="none"
                android:fontFamily="@font/poppins_medium"
                android:scrollHorizontally="false"
...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_20dp">

                <TextView
                    android:id="@+id/et_category_top"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:ellipsize="none"
                    android:fontFamily="@font/poppins_regular"
                    android:scrollHorizontally="false"
                    android:text="@string/detail_masjid_kategori"
                    android:textColor="@color/color_subtitle_detail_masjid"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@id/guideline4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="University" />

                <TextView
                    android:id="@+id/et_address_top"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_10dp"
...


            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_maps"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:text="@string/title_direction_maps"
...
                    android:text="@string/photos"
                    android:textColor="@color/color_blue_purplish"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btn_see_all_photos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:scrollHorizontally="false"
...
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/custom_view_item_menu_tab" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                tools:itemCount="1"
                tools:listitem="@layout/item_food" />
...
