...
        android:text="@string/pilih_bahasa"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="normal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/custom_view_item_search_language_dialog"/>

</LinearLayout>
