...
                        android:fontFamily="@font/poppins_regular"
                        android:text="Prayers Room Around"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_15sp" />

                    <TextView
                        android:id="@+id/btn_see_all_masjid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginHorizontal="@dimen/dimen_20dp"
                        android:fontFamily="@font/poppins_regular"
...
