...
                android:fontFamily="@font/poppins_regular"
                android:gravity="top"
                android:hint="Feedback"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_deskripsi"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_20dp"
                android:layout_marginTop="8dp"
                android:hint="Tambahkan Feedback"
...
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:minHeight="@dimen/dimen_50dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_publish_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Publish Review"
                android:backgroundTint="@color/halalkan_primary"
                app:cornerRadius="@dimen/dimen_10dp"
                android:layout_marginHorizontal="@dimen/dimen_20dp"
...
